Telerik.Sitefinity.Frontend/assets/src/sass/sitefinity-backend.sass
// Pre define Bootstrap variables
@import "_variables"
@import "_mixins"

// Import Bootstrap from npm
@import "_bootstrap"

// Overwrite Kendo styles
.sf-backend-wrp
	@import "kendo/_kendo.common-material.min"
	@import "kendo/_kendo.material.min"
	@import "kendo/_editor"
	@import "kendo/_tabstrip"
	@import "kendo/_treeview"
	@import "kendo/_checkbox"
	@import "kendo/_widget.sass"
	@import "kendo/_button.sass"

// Global styles
@import "_global"
.sf-backend-wrp
	@import "_utility-classes"
	@import "_typography"
	@import "loading"

// Overwrite Bootstrap styles
.sf-backend-wrp
	@import "bootstrap/_type"
	@import "bootstrap/_grid"
	@import "bootstrap/_datepicker"
	@import "bootstrap/_buttons"
	@import "bootstrap/_alerts"
	@import "bootstrap/_utilities"
	@import "bootstrap/_modals"
	@import "bootstrap/_list-group"
	@import "bootstrap/_navs"
	@import "bootstrap/_forms"
	@import "bootstrap/_labels"
	@import "bootstrap/_badges"
	@import "bootstrap/_code"

@import "bootstrap/_popovers"
// Icon font
@import "icons/_sf-icon-font"
@import "icons/_icons"

// Needed for foundation overwrites
@import "_foundation-overwrites"

// Custom styles
.sf-backend-wrp
	@import "modules/_tooltip"
	@import "modules/_options"
	@import "modules/_sf-media-selector"
	@import "modules/_sf-tree"
	@import "modules/_sf-drag"
	@import "modules/_sf-flat-taxon-field"
	@import "modules/_sf-Progress"
	@import "modules/_sf-code"
	@import "modules/_sf-textarea"

